# mallin

./: Exploracion.ipynb  README.md  main.py  model_config.py  preprocessing.py  pyproject.toml  scaled_data.rds  utils.py
data/: original.rds
results/: AutoARIMA().csv  AutoARIMA(,fcov=month,Tmax,Tmin,Snow).csv  AutoARIMA(,pcov=month,Tmax,Tmin,Snow).csv  AutoARIMA(season_length=24).csv  AutoARIMA(season_length=24,fcov=month,Tmax,Tmin,Snow).csv  AutoARIMA.csv  AutoETS().csv  AutoETS(,fcov=month,Tmax,Tmin,Snow).csv  AutoETS(,pcov=month,Tmax,Tmin,Snow).csv  AutoETS(season_length=24).csv  AutoETS(season_length=24,fcov=month,Tmax,Tmin,Snow).csv  AutoETS.csv  BlockLSTM(icl=12,tl=12,hd=16).csv  BlockLSTM(icl=12,tl=12,hd=16,pcov=month,Snow,Evap,Tmax,Tmin).csv  BlockLSTM(icl=12,tl=12,hd=256).csv  BlockLSTM(icl=12,tl=12,hd=64).csv  BlockLSTM(icl=16,tl=16,hd=16).csv  BlockLSTM(icl=16,tl=16,hd=256).csv  BlockLSTM(icl=24,tl=24,hd=16,pcov=month,Snow,Evap,Tmax,Tmin,pcov=month,Snow,Evap,Tmax,Tmin).csv  BlockLSTM(icl=6,tl=6,hd=16).csv  LSTM(icl=16,tl=16,cov=False).csv  LSTM(icl=24,tl=24,cov=False).csv  XGB(lags=12,lags_past_covariates=12,lags_future_covariates=(0, 1, 2, 3, 4),output_chunk_length=6,fcov=month,Tmax,Tmin,Snow,pcov=month,Snow,Evap,Tmax,Tmin).csv  XGB(lags=12,lags_past_covariates=12,output_chunk_length=6,pcov=month,Snow,Evap,Tmax,Tmin).csv  XGB(lags=3,lags_past_covariates=3,output_chunk_length=3,pcov=month,Snow,Evap,Tmax,Tmin).csv  XGB(lags=3,lags_past_covariates=3,output_chunk_length=6,pcov=month,Snow,Evap,Tmax,Tmin).csv  results.csv
results/AutoARIMA/: Mallin01.pkl  Mallin02.pkl  Mallin03.pkl  Mallin04.pkl  Mallin05.pkl  Mallin06.pkl  Mallin07.pkl  Mallin08.pkl  Mallin09.pkl  Mallin10.pkl
results/AutoARIMA()/: Mallin01.pkl
results/AutoARIMA(,fcov=month,Tmax,Tmin,Snow)/: Mallin01.pkl
results/AutoARIMA(,pcov=month,Tmax,Tmin,Snow)/: Mallin01.pkl
results/AutoARIMA(season_length=24)/: Mallin01.pkl
results/AutoARIMA(season_length=24,fcov=month,Tmax,Tmin,Snow)/: Mallin01.pkl
results/AutoETS/: Mallin01.pkl
results/AutoETS()/: Mallin01.pkl
results/AutoETS(,fcov=month,Tmax,Tmin,Snow)/: Mallin01.pkl
results/AutoETS(,pcov=month,Tmax,Tmin,Snow)/: Mallin01.pkl
(+28 files in other folders)
