[project]
version = "0.1.0"
name = "mallin"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "jupyter>=1.1.1",
    "numpy>=1.2",
    "pandas>=2.2.3",
    "patchworklib>=0.6.3",
    "plotnine>=0.14.5",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "pyreadr>=0.5.3",
    "scikit-learn>=1.6.1",
    "scikit-misc>=0.5.1",
    "scipy>=1.15.3",
    "statsmodels>=0.14.4",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "xgboost-cpu",
    "darts>=0.35.0",   
]
gpu = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "xgboost",
    "darts>=0.35.0",

]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",  extra = "cpu" },
  { index = "pytorch-cu128",  extra = "gpu" },
]
torchvision = [
  { index = "pytorch-cpu",  extra = "cpu" },
  { index = "pytorch-cu128",  extra = "gpu" },
]
